recursion.logo.tree.Tree.scala.error
Erreur de compilation :
Tree:12: error: recursive value angle needs type
       val angle = angle/shrink
                   ^